--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-template",
+  "name": "lib-docs-demo",
   "version": "0.0.1",
   "description": "",
   "main": "./dist/test-template.umd.js",
