--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gh-pages": "^3.1.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "less": "^4.1.1",
     "np": "^7.4.0",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
