--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "lib-docs-demo",
   "version": "0.0.1",
   "description": "",
-  "main": "./dist/test-template.umd.js",
-  "module": "./dist/test-template.es.js",
+  "main": "./dist/lib-docs-demo.umd.js",
+  "module": "./dist/lib-docs-demo.es.js",
   "exports": {
     ".": {
-      "import": "./dist/test-template.es.js",
-      "require": "./dist/test-template.umd.js"
+      "import": "./dist/lib-docs-demo.es.js",
+      "require": "./dist/lib-docs-demo.umd.js"
     }
   },
   "types": "dist/src/index.d.ts",
@@ -39,7 +39,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-beta.10",
-    "@vuedx/typescript-plugin-vue": "^0.6.3",
+    "@vuedx/typescript-plugin-vue": "^0.7.4",
     "babel-jest": "^26.6.3",
     "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.2",
