--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,11 @@
       "@/*": ["src/*"],
       "lib-demo": ["src/"]
     },
-    "plugins": ["@vuedx/typescript-plugin-vue"]
+    "plugins": [
+      {
+        "name": "@vuedx/typescript-plugin-vue"
+      }
+    ]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
